--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ PersistentKeepalive = ${persistentKeepalive}
         configLabel.className = "font-medium block mb-2";
         configLabel.textContent = `Config for ${endpoint}`;
         const configTextarea = document.createElement('textarea');
-        configTextarea.className = "w-full h-48 p-2 border border-gray-300 rounded-lg mb-2 outline-none focus:border-gray-400";
+        configTextarea.className = "w-full h-48 p-2 border border-gray-300 rounded-lg mb-2 outline-none focus:border-gray-400 config-textarea";
         configTextarea.value = configContent;
         configTextarea.readOnly = true;
 
@@ -512,6 +512,23 @@ PersistentKeepalive = ${persistentKeepalive}
         alert("Copied to clipboard");
       }).catch((err) => {
         alert("Failed to copy: " + err);
+      });
+    }
+
+    // Download Configs
+    function downloadConfigs() {
+      const configs = Array.from(document.querySelectorAll('.config-textarea')).map(textarea => textarea.value);
+      const zip = new JSZip();
+      
+      configs.forEach((config, index) => {
+          zip.file(`config${index + 1}.conf`, config);
+      });
+
+      zip.generateAsync({ type: "blob" }).then(function(content) {
+          const link = document.createElement('a');
+          link.href = URL.createObjectURL(content);
+          link.download = "wireguard_configs.zip";
+          link.click();
       });
     }
   </script>
